# disquip-bot

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-develop  LICENSE  Makefile  README.md  README.rst  disquip.ini  do_release.bat  docker_build.bat  docker_build_develop.bat  docker_run.bat  pyproject.toml  requirements.txt  run.py  run_bot.py  setup.py
.github/workflows/: docker_build_push.yml
disquip/: README.rst  __main__.py  bot.py  discover.py  grep.py  normalize.py
docker_ffmpeg/: Dockerfile-buster  Dockerfile-slim
service/: README.rst  disquiop-bot.cron  disquip-bot  disquip-bot.logrotate.conf  disquip-bot.rsyslog.conf  disquip-bot.service
tests/: conftest.py  test_bot.py  test_discover.py  test_grep.py
